@@ -49,13 +49,15 @@ for my $level ( 0 .. 9 ) {
         'checking for expected debug output' );
 }
 
+my $level;
 trap {
-    $base->set_debug_level();
+    $level = $base->set_debug_level();
 };
+isa_ok($trap->die, 'App::ClusterSSH::Exception', 'Caught exception object OK');
 is( $trap->leaveby, 'die', 'returned ok' );
 is( $trap->stderr,  '',    'Expecting no STDERR' );
 is( $trap->stdout,  '',    'Expecting no STDOUT' );
-like( $trap->die, qr/^Debug level not provided at/,
+like( $trap->die, qr/^Debug level not provided/,
     'Got correct croak text' );
 
 $base->set_debug_level(10);
@@ -137,6 +139,7 @@ is( $trap->stdout,  '',       'Expecting no STDOUT' );
 trap {
     $get_config = $base->config();
 };
+isa_ok($trap->die, 'App::ClusterSSH::Exception', 'Caught exception object OK');
 is( $trap->leaveby, 'die', 'died ok' );
 like( $trap->die, qr/^config has not yet been set/,
     'Got correct croak text' );
@@ -147,6 +150,7 @@ is( $get_config,   undef, 'config left empty' );
 trap {
     $object = $base->set_config();
 };
+isa_ok($trap->die, 'App::ClusterSSH::Exception', 'Caught exception object OK');
 is( $trap->leaveby, 'die', 'died ok' );
 like( $trap->die, qr/^passed config is empty/, 'Got correct croak text' );
 is( $trap->stderr, '', 'Expecting no STDERR' );
@@ -178,6 +182,7 @@ trap {
     $object = $base->set_config('set to another scalar');
 };
 is( $trap->leaveby, 'die', 'died ok' );
+isa_ok($trap->die, 'App::ClusterSSH::Exception', 'Caught exception object OK');
 like(
     $trap->die,
     qr/^config\shas\salready\sbeen\sset/,
@@ -190,6 +195,7 @@ trap {
     $object = $base->set_config();
 };
 is( $trap->leaveby, 'die', 'died ok' );
+isa_ok($trap->die, 'App::ClusterSSH::Exception', 'Caught exception object OK');
 like(
     $trap->die,
     qr/^config\shas\salready\sbeen\sset/,
